# xianyu-vinyl-crawler

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  scrapy.cfg  selenium_scraper.py
.github/workflows/: xianyu-monitor.yml
docs/: GITHUB_ACTIONS_SETUP.md  WHATSAPP_SETUP.md
output/: analyze.js  compare_20260208.js  compare_sold.js  compare_sold.py  compare_today.js  comparison_20260208.json  complete_sellers_comparison.json  debug_page.html  goofish_raw.html  mengde_20260208.json  mengde_today.json  mengdezhihaiyuan_complete_170.json  mengdezhihaiyuan_full_133.json  mengdezhihaiyuan_products.json  page_snapshot.txt  page_text.txt  seller_comparison_analysis.js  sellers_comparison.json  xianyu_vinyl_20260206.json  xianyu_vinyl_20260206_184518.json  xianyu_vinyl_20260206_184733.json  xianyu_vinyl_20260206_185013.json  xianyu_yinyuedatong_20260206.json  xianyu_yinyuedatong_complete_172.json  xianyu_yinyuedatong_complete_172_fixed.json  yinyuedatong_20260208.json  yinyuedatong_24hours.json  yinyuedatong_24hours_actual.json  yinyuedatong_feb1_6_filtered.json  yinyuedatong_feb1_6_preset.json  yinyuedatong_summary.json  yinyuedatong_today.json
scripts/: analyze-smart.js  compare-sellers.js  compare-smart.js  export.py  find-acquisitions.js  notify-whatsapp.js  notify.js  scrape-full.js  scrape-incremental.js  scrape-with-sold.js  start.py
skills/: README.md  xianyu-vinyl-comparison.md  xianyu_compare.js  xianyu_compare.py
xianyu_crawler/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
xianyu_crawler/auth/: __init__.py  (+2 more)
(+9 files in other folders)
