[project]
name = "xianyu-vinyl-crawler"
version = "1.0.0"
description = "Xianyu (Idle Fish) vinyl record crawler with QR code login support"
authors = [{ name = "chq04" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core web scraping
    "scrapy>=2.11.0",
    "playwright>=1.40.0",
    "scrapy-playwright>=0.0.25",

    # Scheduling
    "apscheduler>=3.10.0",

    # Data processing
    "pydantic>=2.5.0",
    "pyyaml>=6.0",

    # Logging
    "loguru>=0.7.0",

    # Anti-spider
    "fake-useragent>=1.4.0",

    # Utilities
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
xianyu-crawler = "xianyu_crawler.cli:main"
xianyu-export = "xianyu_crawler.scripts.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xianyu_crawler"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
